# soqute

./: .clang-format  .gitignore  .qmake.conf  CMakeLists.txt  common.pri  soqute.pro  status.txt
Packager/: Packager.pro  filegetters.cpp  filegetters.h  main.cpp
buildsystems/: CMakeLists.txt  soqute.cmake
buildsystems/cmake_test/: CMakeLists.txt
common/: CMakeLists.txt  actor.cpp  actor.h  exception.h  filesystem.cpp  json.cpp  json.h
soqute/Packager/: CMakeLists.txt  filegetters.h
soqute/cmd/: CMakeLists.txt  configcommand.h  installcommand.cpp  installcommand.h  installcommandbase.cpp  installcommandbase.h  removecommand.cpp  showcommand.cpp  textstream.h  updatecommand.h  util_cmd.cpp  util_cmd.h
soqute/core/: CMakeLists.txt  abstractinstaller.cpp  abstractinstaller.h  cache.cpp  cache.h  configurationhandler.h  dependencycalculator.cpp  dependencycalculator.h  downloader.cpp  installedpackages.h  jsinstaller.cpp  jsinstaller.h  loadmetadata.cpp  loadmetadata.h  package.cpp  package.h  packagematcher.h  remover.cpp  remover.h  util_core.h
soqute_cmd/: CMakeLists.txt  basecommand.cpp  basecommand.h  buildsystemcommand.cpp  buildsystemcommand.h  configcommand.cpp  configcommand.h  confirmtask.cpp  confirmtask.h  findinitialpackagestask.cpp  findinitialpackagestask.h  installcommand.cpp  installcommand.h  installcommandbase.cpp  installcommandbase.h  main.cpp  quittask.cpp  quittask.h  removecommand.cpp  removecommand.h  searchcommand.cpp  searchcommand.h  searchtask.cpp  searchtask.h  showcommand.cpp  showcommand.h  showtask.cpp  showtask.h  soqute_cmd.pro  textstream.cpp  textstream.h  updatecommand.cpp  util_cmd.cpp  util_cmd.h
soqute_core/: CMakeLists.txt  abstractinstaller.cpp  abstractinstaller.h  actor.cpp  actor.h  cache.cpp  calculatedependenciestask.cpp  calculatedependenciestask.h  configurationhandler.cpp  configurationhandler.h  dependencycalculator.cpp  dependencycalculator.h  downloader.cpp  downloader.h  filesystem.cpp  filesystem.h  installedpackages.cpp  installedpackages.h  installnativedependenciestask.cpp  installnativedependenciestask.h  jsinstaller.cpp  jsinstaller.h  json.h  loadmetadata.cpp  loadmetadata.h  package.cpp  package.h  packagematcher.cpp  packagematcher.h  remover.cpp  remover.h  soqute_core.pro  soqute_core_global.h  task.cpp  task.h  taskhandler.cpp  taskhandler.h  util_core.cpp  util_core.h
tester/: CMakeLists.txt  main.cpp  test_meta.json  tester.pro
tests/: CMakeLists.txt  test_meta.json  testutil.cpp  testutil.h  tst_blackbox_install_remove.cpp  tst_util_core.cpp
wand/cmd/: CMakeLists.txt  main.cpp
wand/core/: CMakeLists.txt
